--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,16 @@
 
 header{
     display: flex;
+    justify-content: center;
     padding: 40px;
-    gap: 350px;
     line-height: 20px;
+    gap: 30px;
 }
 
 .logo{
-    margin-left: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 body{
@@ -32,6 +35,7 @@ main{
     width: 100vw;
     height: 500px;
     margin-top: 30px;
+    height: 70vh;
 }
 
 .btn_cript{
