--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,107 +1,156 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-header{
+header {
     display: flex;
     justify-content: center;
     padding: 40px;
     line-height: 20px;
     gap: 30px;
+    color: #FFFFFF;
 }
 
-.logo{
+.logo {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-body{
+body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-image: url(../images/wallpapper.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-main{
-    flex: 1;
-}
-
-.container{
+main {
     display: flex;
-    gap: 20px;
+    flex: 1;
     justify-content: center;
-    width: 100vw;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    width: 1440px;
     height: 500px;
-    margin-top: 30px;
     height: 70vh;
 }
 
-.btn_cript{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    width: 220px;
-    border-radius: 5px solid #000;
+.text_area {
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+    font-size: 1.0rem;
+    color: #FFFFFF;
+    resize: none;
+    border-style: none;
 }
 
-.btn_decript{
+.btn_cript {
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 15px;
+    padding: 10px;
     width: 220px;
-    border-radius: 5px solid #000;
+    color: #FFFFFF;
+    font-size: 1.0rem;
+    border-radius: 15px;
+    background-color: rgba(255, 165, 0, 0.7);
+    border: none;
+    cursor: pointer;
 }
 
-.area_texto_normal{
+.btn_cript:hover {
+    background-color: rgba(255, 165, 0, 0.9);
+}
+
+.btn_decript {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    width: 220px;
+    font-size: 1.0rem;
+    color: #FFFFFF;
+    border-radius: 15px;
+    background-color: rgba(60, 179, 113, 0.7);
+    border: none;
+    cursor: pointer;
+}
+
+.btn_decript:hover {
+    background-color: rgba(60, 179, 113, 0.9);
+}
+
+.area_texto_normal {
     display: flex;
     flex-direction: column;
-    width: 60%;
-    height: auto;
-    background-color: blue;
+    width: 70%;
 }
 
-.info{
+.info {
     display: flex;
     justify-content: center;
-    margin-top: 150px;
+    color: #FFFFFF;
+    margin-top: 275px;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 2px#000000;
 }
 
-.botoes{
+.botoes {
     display: flex;
     justify-content: center;
     gap: 30px;
-    margin-top: 20px;
 }
 
-.area_texto_encripitado{
+.area_texto_encripitado {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: red;
+    width: 40%;
+    height: 100%;
 }
 
-.img_encript{
+.img_encript {
     display: flex;
     justify-content: center;
-    margin-top: -150px;
+    margin-top: 50px;
+    background-color: blue;
+    width: 30%;
+    height: auto;
+    border-radius: 10px;
+    margin-top: -250px;
 }
 
-.btn_cop{
+.btn_cop {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    margin-top: 250px;
+    width: 45%;
+    font-size: 1.0rem;
+    color: #FFFFFF;
+    margin-top: 490px;
+    padding: 10px;
+    background-color: rgba(62, 130, 190, 0.7);
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
 }
 
-footer{
+.btn_cop:hover {
+    background-color: rgba(62, 130, 190, 0.9);
+}
+
+footer {
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 30px;
+    padding: 20px;
     background-color: gray;
 }
