update regex para não aceitar acentos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,10 @@ main {
     margin-top: -250px;
 }
 
+.img_encript_none{
+    display: none;
+}
+
 .btn_cop {
     display: flex;
     justify-content: center;
@@ -135,12 +139,17 @@ main {
     width: 45%;
     font-size: 1.0rem;
     color: #FFFFFF;
-    margin-top: 490px;
+    margin-top: 320px;
     padding: 10px;
     background-color: rgba(62, 130, 190, 0.7);
     border-radius: 15px;
     border: none;
     cursor: pointer;
+    display: none;
+}
+
+.btn_cop_block{
+    display: block;
 }
 
 .btn_cop:hover {
