--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+:root {
+    --cor-primaria: #FFFFFF;
+    --cor-secundaria: #000000;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,20 +15,29 @@ header {
     display: flex;
     justify-content: center;
     padding: 40px;
-    line-height: 20px;
+    line-height: 40px;
     gap: 30px;
-    color: #FFFFFF;
+    width: 100vw;
+    color: var(--cor-primaria);
 }
 
 .logo {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 40px;
+    height: 40px;
+}
+
+.titulo {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700px;
 }
 
 body {
     display: flex;
     flex-direction: column;
+    width: 100vw;
     min-height: 100vh;
     background-image: url(../images/wallpapper.jpg);
     background-position: center;
@@ -30,10 +46,11 @@ body {
 }
 
 main {
-    display: flex;
     flex: 1;
+    display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 }
 
 .container {
@@ -48,10 +65,9 @@ main {
 .text_area {
     padding: 10px;
     background-color: rgba(255, 255, 255, 0.2);
-    font-size: 1.0rem;
-    color: #FFFFFF;
-    resize: none;
+    color: var(--cor-primaria);
     border-style: none;
+    outline: none;
 }
 
 .btn_cript {
@@ -59,7 +75,7 @@ main {
     justify-content: center;
     padding: 10px;
     width: 220px;
-    color: #FFFFFF;
+    color: var(--cor-primaria);
     font-size: 1.0rem;
     border-radius: 15px;
     background-color: rgba(255, 165, 0, 0.7);
@@ -77,7 +93,7 @@ main {
     padding: 10px;
     width: 220px;
     font-size: 1.0rem;
-    color: #FFFFFF;
+    color: var(--cor-primaria);
     border-radius: 15px;
     background-color: rgba(60, 179, 113, 0.7);
     border: none;
@@ -92,21 +108,25 @@ main {
     display: flex;
     flex-direction: column;
     width: 70%;
+    height: 70vh;
+    font-size: 1.0rem;
 }
 
 .info {
     display: flex;
     justify-content: center;
-    color: #FFFFFF;
-    margin-top: 275px;
+    color: var(--cor-primaria);
+    margin-top: auto;
     margin-bottom: 20px;
     text-shadow: 2px 2px 2px#000000;
+    font-weight: 700px;
 }
 
 .botoes {
     display: flex;
     justify-content: center;
     gap: 30px;
+    margin-bottom: 50px;
 }
 
 .area_texto_encripitado {
@@ -115,20 +135,20 @@ main {
     flex-direction: column;
     width: 40%;
     height: 100%;
+    font-size: 1.0rem;
 }
 
 .img_encript {
     display: flex;
     justify-content: center;
     margin-top: 50px;
-    background-color: blue;
     width: 30%;
     height: auto;
     border-radius: 10px;
-    margin-top: -250px;
+    margin-top: -150px;
 }
 
-.img_encript_none{
+.img_encript_none {
     display: none;
 }
 
@@ -138,7 +158,7 @@ main {
     align-items: center;
     width: 45%;
     font-size: 1.0rem;
-    color: #FFFFFF;
+    color: var(--cor-primaria);
     margin-top: 320px;
     padding: 10px;
     background-color: rgba(62, 130, 190, 0.7);
@@ -148,7 +168,7 @@ main {
     display: none;
 }
 
-.btn_cop_block{
+.btn_cop_block {
     display: block;
 }
 
@@ -159,7 +179,78 @@ main {
 footer {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
+    align-items: center;
     padding: 20px;
     background-color: gray;
+}
+
+@media (max-width: 1600px) {
+    .container {
+        width: 70vw;
+        height: 70vh;
+        margin-top: auto;
+    }
+    .btn_cop {
+        width: 120px;
+        margin-top: 30px;
+    }
+
+    footer{
+        width: 100vw;
+    }
+}
+
+@media (max-width: 920px) {
+    .container {
+        width: 100%;
+        height: 70vh;
+        gap: 10px;
+        margin-top: 120px;
+    }
+
+    .area_texto_normal {
+        width: 50%;
+    }
+
+    .area_texto_encripitado {
+        width: 40%;
+    }
+}
+
+@media (max-width: 720px) {
+
+
+    main {
+        width: 100vw;
+    }
+
+    footer {
+        margin-top: 250px;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .area_texto_normal {
+        width: 70vw;
+        height: 100vh;
+    }
+
+    .area_texto_encripitado {
+        width: 100vw;
+        margin-top: auto;
+    }
+
+    .botoes {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn_cop {
+        width: 120px;
+        margin-top: 30px;
+    }
 }
