--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,19 @@ main {
     background-color: rgba(60, 179, 113, 0.9);
 }
 
+.btn_clear{
+      display: flex;
+    justify-content: center;
+    padding: 10px;
+    width: 220px;
+    font-size: 1.0rem;
+    color: var(--cor-primaria);
+    border-radius: 15px;
+    background-color: rgba(120, 120, 120, 0.7);
+    border: none;
+    cursor: pointer;
+}
+
 .area_texto_normal {
     display: flex;
     flex-direction: column;
@@ -223,6 +236,7 @@ footer {
 
     main {
         width: 100vw;
+        margin-top: 30px;
     }
 
     footer {
