--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header {
 
 .titulo {
     font-family: 'Roboto', sans-serif;
-    font-weight: 700px;
+    font-weight: 700;
 }
 
 body {
@@ -68,6 +68,8 @@ main {
     color: var(--cor-primaria);
     border-style: none;
     outline: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: medium;
 }
 
 .btn_cript {
@@ -81,6 +83,7 @@ main {
     background-color: rgba(255, 165, 0, 0.7);
     border: none;
     cursor: pointer;
+    font-family: 'Roboto', sans-serif;
 }
 
 .btn_cript:hover {
@@ -98,6 +101,7 @@ main {
     background-color: rgba(60, 179, 113, 0.7);
     border: none;
     cursor: pointer;
+    font-family: 'Roboto', sans-serif;
 }
 
 .btn_decript:hover {
@@ -105,7 +109,7 @@ main {
 }
 
 .btn_clear{
-      display: flex;
+    display: flex;
     justify-content: center;
     padding: 10px;
     width: 220px;
@@ -115,6 +119,11 @@ main {
     background-color: rgba(120, 120, 120, 0.7);
     border: none;
     cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+}
+
+.btn_clear:hover{
+    background-color: rgba(120, 120, 120, 0.9);
 }
 
 .area_texto_normal {
@@ -122,7 +131,6 @@ main {
     flex-direction: column;
     width: 70%;
     height: 70vh;
-    font-size: 1.0rem;
 }
 
 .info {
@@ -132,7 +140,7 @@ main {
     margin-top: auto;
     margin-bottom: 20px;
     text-shadow: 2px 2px 2px#000000;
-    font-weight: 700px;
+    font-size: 18px;
 }
 
 .botoes {
@@ -148,7 +156,6 @@ main {
     flex-direction: column;
     width: 40%;
     height: 100%;
-    font-size: 1.0rem;
 }
 
 .img_encript {
@@ -158,7 +165,7 @@ main {
     width: 30%;
     height: auto;
     border-radius: 10px;
-    margin-top: -150px;
+    margin-top: -190px;
 }
 
 .img_encript_none {
@@ -179,6 +186,7 @@ main {
     border: none;
     cursor: pointer;
     display: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 .btn_cop_block {
@@ -236,7 +244,7 @@ footer {
 
     main {
         width: 100vw;
-        margin-top: 30px;
+        margin-top: 110px;
     }
 
     footer {
