--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ main {
     background-color: rgba(60, 179, 113, 0.9);
 }
 
-.btn_clear{
+.btn_clear {
     display: flex;
     justify-content: center;
     padding: 10px;
@@ -122,7 +122,7 @@ main {
     font-family: 'Roboto', sans-serif;
 }
 
-.btn_clear:hover{
+.btn_clear:hover {
     background-color: rgba(120, 120, 120, 0.9);
 }
 
@@ -203,7 +203,9 @@ footer {
     width: 100vw;
     align-items: center;
     padding: 20px;
-    background-color: gray;
+    color: var(--cor-primaria);
+    background: rgb(7, 9, 38);
+    background: linear-gradient(45deg, rgba(7, 9, 38, 1) 0%, rgba(9, 83, 121, 1) 48%, rgba(0, 212, 255, 1) 100%);
 }
 
 @media (max-width: 1600px) {
@@ -212,12 +214,13 @@ footer {
         height: 70vh;
         margin-top: auto;
     }
+
     .btn_cop {
         width: 120px;
         margin-top: 30px;
     }
 
-    footer{
+    footer {
         width: 100vw;
     }
 }
