Inserido as redes sociais no footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,9 +203,15 @@ footer {
     width: 100vw;
     align-items: center;
     padding: 20px;
+    gap: 20px;
     color: var(--cor-primaria);
     background: rgb(7, 9, 38);
     background: linear-gradient(45deg, rgba(7, 9, 38, 1) 0%, rgba(9, 83, 121, 1) 48%, rgba(0, 212, 255, 1) 100%);
+}
+
+footer img{
+    width: 32px;
+    height: 32px;
 }
 
 @media (max-width: 1600px) {
